#13 dodanie linku strony do przycisku dodaj imprezę

--- a/src/main/resources/templates/party_list.html
+++ b/src/main/resources/templates/party_list.html
@@ -18,9 +18,9 @@
     </div>
 </nav>
 <div class="d-grid gap-2 col-6 mx-auto">
-    <button type="button" class="btn btn-success btn-lg">Sylwester</button><br><br>
-    <button type="button" class="btn btn-success btn-lg">Urodziny</button><br><br>
-    <button type="button" class="btn btn-outline-success">Dodaj imprezę</button>
+    <a role="button" class="btn btn-success btn-lg">Sylwester</a><br><br>
+    <a role="button" class="btn btn-success btn-lg">Urodziny</a><br><br>
+    <a role="button" class="btn btn-outline-success" href="party-add.html">Dodaj imprezę</a>
 </div>
 </body>
 </html>
