--- a/src/main/resources/templates/party-add.html
+++ b/src/main/resources/templates/party-add.html
@@ -8,18 +8,19 @@
     <title>Party - add form</title>
 </head>
 <body>
-<form action="/party-add">
+<form th:action="@{/party-add}" th:method="post" th:object="${party}">
     <h1>Add Party</h1>
 
     <div class="form-group">
-        <input type="text" class="form-control" id="name" placeholder="Name">
+        <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="Name">
     </div>
 
-    <div class="form-check" th:each="playlist: ${playlists}">
-        <input class="form-check-input" type="checkbox" th:value="${playlist.name}" th:id="${playlist.name}">
+    <div class="form-check" th:each="playlist : ${allPlaylists}">
+        <input class="form-check-input" type="checkbox" th:field="*{playlists}" th:value="${playlist.uri}"
+               th:id="${playlist.name}">
         <label class="form-check-label" th:for="${playlist.name}" th:text="${playlist.name}"></label>
     </div>
-
+    
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
 </body>
