--- a/src/main/resources/templates/party-list.html
+++ b/src/main/resources/templates/party-list.html
@@ -15,6 +15,13 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown" float-right>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 <div class="d-grid gap-2 col-6 mx-auto" th:each="party: ${parties}">
