--- a/src/main/resources/templates/party-details-tracks.html
+++ b/src/main/resources/templates/party-details-tracks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">
-    <title>Party list</title>
+    <title>Party details - tracks</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,11 +24,18 @@
         </div>
     </div>
 </nav>
-<div class="d-grid gap-2 col-6 mx-auto" th:each="party: ${parties}">
-    <a role="button" class="btn btn-success btn-lg" th:text="${party.name}" th:href="@{/party-details/{id}(id = ${party.id})}"/><br><br>
-</div>
-<div class="d-grid gap-2 col-6 mx-auto">
-    <a role="button" class="btn btn-outline-success" href="/party-add">Dodaj imprezę</a>
-</div>
+
+<a th:href="@{/party-details/{id}(id = ${tracks.get(0).playlist.party.id})}"><span th:text="${tracks.get(0).playlist.party.name}"></span></a> => <span th:text="${tracks.get(0).playlist.name}"></span>
+
+<!-- Lista na sztywno, żeby pokazać wygląd. Poniżej zakomentowany jest kod z pętlą, która wyświetli wszystkie dostępne playlisty -->
+<ol class="list-group list-group-numbered">
+    <li class="list-group-item d-flex justify-content-between align-items-start" th:each="track: ${tracks}">
+        <div class="ms-2 me-auto">
+            <div class="fw-bold" th:text="${track.name}"></div>
+        </div>
+        <span class="badge bg-primary rounded-pill" th:text="${track.durationMs}"></span>
+    </li>
+</ol>
+
 </body>
 </html>
