#34 wysyłanie nagrań do kolejki, przesyłanie pojedynczego nagrania z playlisty

--- a/src/main/resources/templates/party-details-tracks.html
+++ b/src/main/resources/templates/party-details-tracks.html
@@ -33,7 +33,7 @@
         <div class="ms-2 me-auto">
             <div class="fw-bold" th:text="${track.name}"></div>
         </div>
-        <span class="badge bg-primary rounded-pill" th:text="${track.durationMs}"></span>
+        <a th:href="@{/play/{uri}(uri = ${track.uri})}">play</a>
     </li>
 </ol>
 
