#37 jakiś bliżej nieokreślony stan :)

--- a/src/main/resources/templates/party-details-tracks.html
+++ b/src/main/resources/templates/party-details-tracks.html
@@ -33,7 +33,7 @@
         <div class="ms-2 me-auto">
             <div class="fw-bold" th:text="${track.name}"></div>
         </div>
-        <a th:href="@{/play/{uri}(uri = ${track.uri})}">play</a>
+        <a th:href="@{/play/{id}(id = ${track.id})}">play</a>
     </li>
 </ol>
 
