--- a/src/main/resources/templates/party-list.html
+++ b/src/main/resources/templates/party-list.html
@@ -25,7 +25,9 @@
     </div>
 </nav>
 <div class="d-grid gap-2 col-6 mx-auto" th:each="party: ${parties}">
-    <a role="button" class="btn btn-success btn-lg" th:text="${party.name}" th:href="@{/party-details/{id}(id = ${party.id})}"/><br><br>
+    <a role="button" class="btn btn-success btn-lg" th:text="${party.name}" th:href="@{/party-details/{id}(id = ${party.id})}"/>
+    <a role="button" class="btn btn-success btn-lg" th:href="@{/party/{id}/start(id = ${party.id})}">start</a>
+    <br><br>
 </div>
 <div class="d-grid gap-2 col-6 mx-auto">
     <a role="button" class="btn btn-outline-success" href="/party-add">Dodaj imprezę</a>
