#38 wysyłanie utworów na kolejkę, poprawienie wyglądu listy playlist

--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -7,9 +7,11 @@
 .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show > .nav-link:hover {
     color: var(--bs-gray-100);
 }
+body {
+    background-color: #121212;
+}
 
 main {
-    height: 100vh;
     background-color: #121212;
     padding-top: 55px;
 }
@@ -19,11 +21,21 @@ main {
     background-color: #cbcbcb;
 }
 
-.card-img, .card-img-top {
+.card-img, .card-img-top,
+ol.list-group{
     border-radius: 0;
 }
 
 footer.fixed-bottom {
     text-align: center;
     color: var(--bs-gray-600);
+}
+
+a {
+    text-decoration: none;
+    color: var(--bs-light);
+}
+
+li.list-group-item.d-flex.justify-content-between.align-items-start.bg-black {
+    padding: 0.7rem 1rem;
 }
