--- a/src/main/resources/templates/party-add.html
+++ b/src/main/resources/templates/party-add.html
@@ -47,7 +47,7 @@
     <div class="form-check">
         <select name="image">
             <option value="new-year">New Year</option>
-            <option value="18th" selected>18th birth</option>
+            <option value="eighteen" selected>18th birth</option>
             <option value="other">Other</option>
         </select>
     </div>
