--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -7,6 +7,7 @@
 .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show > .nav-link:hover {
     color: var(--bs-gray-100);
 }
+
 body {
     background-color: #121212;
 }
@@ -22,7 +23,7 @@ main {
 }
 
 .card-img, .card-img-top,
-ol.list-group{
+ol.list-group {
     border-radius: 0;
 }
 
@@ -38,4 +39,21 @@ a {
 
 li.list-group-item.d-flex.justify-content-between.align-items-start.bg-black {
     padding: 0.7rem 1rem;
+}
+
+.track-name {
+    color: var(--bs-light)
+}
+
+li.list-group-item.d-flex.justify-content-between.align-items-start {
+    background-color: #2c2c2c;
+}
+
+.list-group-numbered>li::before {
+    color: #979797;
+}
+
+a.play-button {
+    background-color: #1db954;
+    border-radius: 50%;
 }
