--- a/src/main/resources/templates/party-details-tracks.html
+++ b/src/main/resources/templates/party-details-tracks.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">
+    <link th:href="@{/styles/styles.css}" rel="stylesheet"/>
     <title>Party details - tracks</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Spotify Party App</a>
+        <a class="navbar-brand" href="/">Spotify Party</a>
+
+
+        <a th:href="@{/party-details/{id}(id = ${tracks.get(0).playlist.party.id})}"><span
+                th:text="${tracks.get(0).playlist.party.name}"></span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon bg-secondary"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown" float-right>
             <ul class="navbar-nav">
@@ -25,17 +30,18 @@
     </div>
 </nav>
 
-<a th:href="@{/party-details/{id}(id = ${tracks.get(0).playlist.party.id})}"><span th:text="${tracks.get(0).playlist.party.name}"></span></a> => <span th:text="${tracks.get(0).playlist.name}"></span>
+<main>
 
-<!-- Lista na sztywno, żeby pokazać wygląd. Poniżej zakomentowany jest kod z pętlą, która wyświetli wszystkie dostępne playlisty -->
-<ol class="list-group list-group-numbered">
-    <li class="list-group-item d-flex justify-content-between align-items-start" th:each="track: ${tracks}">
-        <div class="ms-2 me-auto">
-            <div class="fw-bold" th:text="${track.name}"></div>
-        </div>
-        <a th:href="@{/play/{uri}(uri = ${track.uri})}">play</a>
-    </li>
-</ol>
+    <ol class="list-group list-group-numbered">
+        <li class="list-group-item d-flex justify-content-between align-items-start" th:each="track: ${tracks}">
+            <div class="ms-2 me-auto">
+                <div class="fw-normal track-name" th:text="${track.name}"></div>
+            </div>
+<!--            <a th:href="@{/play/{uri}(uri = ${track.uri})}">play</a>-->
+            <a class="play-button" th:href="@{/play/{uri}(uri = ${track.uri})}"><svg height="28" role="img" width="28" viewBox="0 0 24 24" aria-hidden="true"><polygon points="21.57 12 5.98 3 5.98 21 21.57 12" fill="currentColor"></polygon></svg></a>
+        </li>
+    </ol>
 
+</main>
 </body>
 </html>
