--- a/src/main/resources/templates/party-details.html
+++ b/src/main/resources/templates/party-details.html
@@ -27,7 +27,7 @@
 </nav>
 <main>
     <ol class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-start bg-black" th:each="playlist: ${playlists}">
+        <li class="list-group-item d-flex justify-content-between align-items-start" th:each="playlist: ${playlists}">
             <div class="ms-2 me-auto">
                 <a th:href="@{/party-details/{id}/tracks(id = ${playlist.id})}" th:text="${playlist.name}"/>
             </div>
