--- a/src/main/resources/templates/party-details-tracks.html
+++ b/src/main/resources/templates/party-details-tracks.html
@@ -37,8 +37,14 @@
             <div class="ms-2 me-auto">
                 <div class="fw-normal track-name" th:text="${track.name}"></div>
             </div>
-<!--            <a th:href="@{/play/{uri}(uri = ${track.uri})}">play</a>-->
-            <a class="play-button" th:href="@{/play/{uri}(uri = ${track.uri})}"><svg height="28" role="img" width="28" viewBox="0 0 24 24" aria-hidden="true"><polygon points="21.57 12 5.98 3 5.98 21 21.57 12" fill="currentColor"></polygon></svg></a>
+
+<!--            jeśli aktywny-->
+            <a th:if="${track.isActive}" class="play-button" th:href="@{/play/{uri}(uri = ${track.uri})}"><svg height="28" role="img" width="28" viewBox="0 0 24 24" aria-hidden="true"><polygon points="21.57 12 5.98 3 5.98 21 21.57 12" fill="currentColor"></polygon></svg></a>
+
+<!--            jeśli nieaktywny to najpierw odblokuj-->
+            <a th:unless="${track.isActive}" class="padlock-button" th:href="@{/unlock/{uri}(uri = ${track.uri})}">
+                <img th:src="@{/images/padlock.png}" alt="zablokowane" width="28px" />
+            </a>
         </li>
     </ol>
 
