--- a/src/main/resources/templates/party-details.html
+++ b/src/main/resources/templates/party-details.html
@@ -30,8 +30,10 @@
         <li class="list-group-item d-flex justify-content-between align-items-start" th:each="playlist: ${playlists}">
             <div class="ms-2 me-auto">
                 <a th:href="@{/party-details/{id}/tracks(id = ${playlist.id})}" th:text="${playlist.name}"/>
+                <span class="badge bg-secondary rounded-pill" th:text="${playlist.tracks.size}"></span>
             </div>
-            <span class="badge bg-secondary rounded-pill" th:text="${playlist.tracks.size}"></span>
+            <a class="btn btn-secondary play-button" th:href="@{/party-details/{id}/play(id = ${playlist.id}, limit = 2)}">1</a>
+            <a class="btn btn-secondary play-button" th:href="@{/party-details/{id}/play(id = ${playlist.id}, limit = 3)}">3</a>
         </li>
     </ol>
 </main>
