--- a/src/main/resources/templates/party-details.html
+++ b/src/main/resources/templates/party-details.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/search/{partyId}(partyId = ${partyId})}">Search</a>
+                </li>
             </ul>
         </div>
     </div>
